# handyman-agent

./: .gitignore  LICENSE  README.md  cli.py  config.py  ollama_client.py  pyproject.toml  server.py  worker.py
.github/workflows/: ci.yml
docs/: DELEGATING.md
docs/superpowers/plans/: 2026-07-22-foundation.md
docs/superpowers/specs/: 2026-07-22-oss-generalization-design.md
handyman/: __init__.py  cli.py  config.py  db.py  ollama_client.py  procutil.py  progress.py  provider.py  registry.py  server.py  setup.py  tools.py  worker.py  workspace.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_file.py  test_db.py  test_db_provider.py  test_ollama_client.py  test_procutil.py  test_progress.py  test_provider_choice.py  test_registry.py  test_registry_cost.py  test_server.py  test_setup.py  test_tools_bash.py  test_tools_files.py  test_tools_web.py  test_worker.py  test_worker_dispatch.py  test_workspace.py
